--- a/styles/global.css
+++ b/styles/global.css
@@ -6,6 +6,8 @@ body {
     --secondary-pop-color: #b33939;
     --padding: 20px;
     --border-rad: 5px;
+	--error-color: #e84118;
+	--button-font-size: 24px;
     padding: 0;
     margin: 0;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
