--- a/styles/profile.css
+++ b/styles/profile.css
@@ -7,7 +7,37 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    align-items: flex-start;
+}
+.about-text>.gen-info {
+    font-style: italic;
 }
 .profile-pic {
     margin-right: var(--padding);
+}
+#match-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: stretch;
+}
+.match-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-items: flex-start;
+    align-items: center;
+}
+.match-wrapper>:first-child {
+    margin-right: var(--padding);
+}
+#match-buttons>#match-yes, #match-buttons>#match-no {
+    padding: calc(var(--padding) / 2);
+}
+#match-buttons>#match-yes{
+    background-color: #b8e994;
+    border-radius: var(--border-rad) 0 0 var(--border-rad);
+}
+#match-buttons>#match-no{
+    background-color: #ff6b81;
+    border-radius: 0 var(--border-rad) var(--border-rad) 0;
 }
