--- a/styles/global.css
+++ b/styles/global.css
@@ -57,3 +57,16 @@ footer {
     height: var(--footer-height);
     box-sizing: border-box;
 }
+.flex-input {
+    margin: auto;
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    align-content: space-between;
+}
+.flex-input>label {
+    margin-right: 5px;
+}
+.flex-input>input {
+    flex-grow: 10;
+}
