--- a/styles/login.css
+++ b/styles/login.css
@@ -11,6 +11,7 @@ body {
 .login-form {
     display: block;
     width: 33%;
+    height: auto;
     min-height: 33vh;
     margin: auto;
     margin-top: 16.5vh;
